# listless

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  release.yml  tests.yml
alembic/: env.py
listless/: app.py  config.py  schemas.py
listless/db/: __init__.py  engine.py  models.py
listless/providers/: __init__.py  base.py
listless/providers/imdb/chart/: client.py  provider.py  router.py
listless/providers/justwatch/: client.py  provider.py  router.py
listless/providers/tmdb/discover/: client.py  provider.py  router.py
listless/providers/tmdb/popular/: client.py  provider.py  router.py
listless/services/: id_mapping.py
tests/: conftest.py  test_app.py  test_id_mapping.py  test_providers.py  test_schemas.py
